nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: test-kube
  labels:
    app: test-kube
spec:
  selector:
    app: test-kube
  type: NodePort
  ports:
  - name: test-kube
    protocol: TCP
    port: 80
    targetPort: 80
