web-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-kube-ingress
  namespace: jamie-demo
spec:
  rules:
    - host: jamie.billylieberman.com
      http:
        paths:
          - path: /
            backend:
              serviceName: test-kube
              servicePort: 80
